# AQA-green-agent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  test_interaction.py
data/: sample_questions.jsonl
data/data_ready/: 20260102_204426_level3.json  20260102_214747_level3.json  20260103_003412_level3.json  20260103_014455_level1.json  20260103_014455_level3.json  20260103_043740_level1.json  20260103_045736_level3.json  20260103_052141_level2.json  20260103_062951_level3.json  20260103_091547_level3.json  20260103_110135_level1.json  20260103_110135_level2.json  20260103_160639_level1.json  20260103_160639_level3.json  20260103_165836_level3.json  20260103_180205_level3.json  20260103_194259_level3.json  20260103_202621_level2.json  20260103_210943_level2.json  20260104_220616_level3.json  20260105_185250_level0.json  20260105_185250_level1.json  20260105_185250_level2.json  20260105_194807_level0.json  20260105_194807_level1.json  20260105_194807_level2.json  20260105_203946_level0.json  20260105_213425_level0.json  20260105_213425_level1.json  20260105_213425_level2.json  20260105_215614_level0.json  20260105_215614_level1.json  20260105_215614_level2.json  20260105_215614_level3.json  20260105_222304_level0.json  20260105_222304_level1.json  20260105_222304_level2.json  20260105_225622_level0.json  20260105_231909_level0.json  20260105_231909_level3.json  (+47 more)
src/: agent.py  dataset.py  evaluator.py  server.py
