[project]
name = "aqa-green-agent"
version = "1.0.0"
description = "A benchmark evaluator for testing AI agents on multi-step reasoning questions using the AQA dataset"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "tsljgj"}
]
keywords = ["a2a", "agent", "benchmark", "evaluation", "qa", "reasoning"]
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
